- Fix unaligned star icon in mid viewport

--- a/src/components/Movie/MovieDetail.module.css
+++ b/src/components/Movie/MovieDetail.module.css
@@ -10,7 +10,7 @@
     }
 
     .movieDetail {
-        width: 75vw;
+        width: 70vw !important;
     }
 }
 
